--- a/style.css
+++ b/style.css
@@ -21,8 +21,72 @@ body {
   position: absolute;
   right: 60px;
   bottom: 8px;
+  width: 200px;
   border: none;
   border-bottom: 1px solid #e7e7e7;
+  outline: none;
+}
+
+.display-typeahead {
+  min-height: 25px;
+  max-height: 150px;
+  width: 200px;
+  position: absolute;
+  right: 60px;
+  top: 39px;
+  border: 1px solid #e7e7e7;
+  border-top: none;
+  background: #FFFFFF;
+  opacity: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  box-shadow: 1px 1px 5px rgba(0,0,0,0.2);
+}
+
+/* width */
+.display-typeahead::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.display-typeahead::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+/* Handle */
+.display-typeahead::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+.display-typeahead::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
+#matched-list {
+  padding: 0;
+  list-style:  none;
+  margin: 0px;
+}
+
+#matched-list .matched-company {
+  font-size: 0.6em;
+  text-overflow:  ellipsis;
+  white-space:  nowrap;
+  margin: 5px 0;
+  overflow:  hidden;
+  border-bottom:  1px solid #e7e7e7;
+  padding: 5px 5px;
+}
+
+#matched-list .matched-company:hover {
+  cursor:  pointer;
+  background:  #f2f2f2;
+}
+
+#matched-list .matched-company:focus {
+  background: #f2f2f2;
   outline: none;
 }
 
