--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing:  border-box;
+}
 body {
   width: 100vw; height: 100vh;
   margin: 0;
@@ -220,12 +223,18 @@ button:active {
   font-weight: 600;
   background: #e7e7e7;
   padding: 2px;
+  color: #000000 !important;
+  position: absolute !important;
+  z-index: 1 !important;
+  left: -30% !important;
 }
 
 .days-change {
   padding: 10px;
   background: #e7e7e7;
-  width: calc(95% - 20px);
+  width: 95%;
+  position: relative;
+  z-index: 1;
 }
 
 .days-change div {
@@ -249,4 +258,29 @@ button:active {
 
 .news-container div a {
   text-decoration: none;
+}
+
+.price-display {
+  display:  flex;
+  border-bottom:  1px solid #f2f2f2;
+  align-items:  center;
+  padding: 2px 0 2px 10px;
+}
+
+.fftytwo-week {
+  display: flex;
+}
+
+.price-label {
+  width: 50%;
+  font-size:  0.8em;
+}
+
+.price {
+  width: 50%;
+}
+
+.other-info {
+  width: 95%;
+  padding-top: 10px;
 }
