--- a/style.css
+++ b/style.css
@@ -121,6 +121,17 @@ body {
   outline: none;
 }
 
+.save {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  border: none;
+  outline: none;
+}
+
 button {
   cursor: pointer;
 }
@@ -284,4 +295,13 @@ button:active {
 .other-info {
   width: 95%;
   padding-top: 10px;
+}
+
+.footer {
+  position:  absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 75px;
+  border-top: 1px solid #e7e7e7;
 }
