--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ button:active {
 
 .body >div {
   flex: 1;
+  overflow-y: auto;
 }
 
 .body >div:first-of-type {
@@ -304,4 +305,35 @@ button:active {
   left: 0;
   height: 75px;
   border-top: 1px solid #e7e7e7;
+  overflow-x: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.ticker {
+  position:  absolute;
+  left: 30px;
+  width: 25px;
+  height: 25px;
+  display:  flex;
+  justify-content:  center;
+  align-items:  center;
+  border-radius: 100%;
+  border:  none;
+  outline: none;
+}
+
+.saved-stock {
+  display:  flex;
+  margin: 0 15px;
+}
+
+.footer-content {
+  display:  flex;
+}
+
+.stock-name {
+  white-space:  nowrap;
+}
+
