--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@ button:active {
 
 .footer {
   position:  absolute;
+  z-index: 2;
   right: 0;
   bottom: 0;
   left: 0;
@@ -318,11 +319,14 @@ button:active {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #FFFFFF;
+  transition: 500ms;
 }
 
 .ticker {
   position:  absolute;
-  left: 30px;
+  left: 35px;
+  top: 25px;
   width: 25px;
   height: 25px;
   display:  flex;
@@ -351,3 +355,21 @@ button:active {
   white-space:  nowrap;
 }
 
+.expand,
+.contract {
+  position:  absolute;
+  left: 5px;
+  top: 25px;
+  width: 25px;
+  height: 25px;
+  display:  flex;
+  justify-content:  center;
+  align-items:  center;
+  border-radius: 100%;
+  border:  none;
+  outline: none;
+}
+
+.contract {
+  opacity: 0;
+}
