--- a/style.css
+++ b/style.css
@@ -373,3 +373,43 @@ button:active {
 .contract {
   opacity: 0;
 }
+
+
+.footer-content-expanded {
+  display:  flex;
+}
+
+#footerContentExpanded {
+  flex-direction:  column;
+  width: 100%;
+  justify-content:  center;
+  align-items:  center;
+}
+
+.footer-stock-container {
+  display: flex;
+  width: 50%;
+  padding: 10px;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.footer-stock-container >div {
+  flex: 1;
+  display:  flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction:  column;
+}
+
+.footer-stock-container >div:last-of-type {
+  align-items: flex-end;
+}
+
+.footer-stock-text .company-name {
+  font-size:  1.25em;
+}
+
+.footer-stock-text .exchange-symbol {
+  font-size:  0.75em;
+  color: #999;
+}
